test/spec_vectors/block/fail/module_159.wat
(module (func $type-param-void-vs-num (block (param i32) (drop))))